--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -128,7 +128,7 @@
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
       <section class="max-w-7xl mx-auto flex justify-end px-4 2xl:px-0">
-        <button id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-9 w-9 rounded-full cursor-pointer border-2 border-transparent dark:border-transparent hover:border-transparent dark:hover:border-transparent dark:border-l-white border-t-jumbo-900 dark:border-r-white border-b-jumbo-900 rotate-12 ease-in-out duration-150 hover:scale-125">
+        <button id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-9 w-9 rounded-full cursor-pointer border-2 border-transparent dark:border-transparent hover:border-transparent dark:hover:border-transparent dark:border-x-white border-y-jumbo-900 rotate-12 ease-in-out duration-150 hover:scale-125">
           <span class="rounded-l-full inline-flex h-6 w-3 translate-x-1 translate-y-1 bg-white dark:bg-jumbo-900"></span>
           <span class="rounded-r-full inline-flex h-6 w-3 translate-x-1 translate-y-1 dark:bg-white bg-jumbo-900"></span>
         </button>
