--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -10,8 +10,9 @@
           <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" alt="Khodok's Logo">
         </a>
       </div>
-      <button id="darkLightm" class="switch rotate-12 md:hidden flex ml-auto mr-2 h-6 w-6 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:drop-shadow-2xl">
-        <span class="rounded-l-full inline-flex h-6 w-3 bg-white dark:bg-jumbo-900"></span><span class="rounded-r-full inline-flex h-6 w-3 dark:bg-white bg-jumbo-900"></span>
+      <button id="darkLightm" class="switch md:hidden flex ml-auto mr-2 h-9 w-9 rounded-full cursor-pointer border-2 border-transparent dark:border-transparent hover:border-transparent dark:hover:border-transparent dark:border-x-white border-y-jumbo-900 rotate-12 ease-in-out duration-150 hover:scale-125">
+        <span class="rounded-l-full inline-flex h-6 w-3 translate-x-1 translate-y-1 bg-white dark:bg-jumbo-900"></span>
+        <span class="rounded-r-full inline-flex h-6 w-3 translate-x-1 translate-y-1 dark:bg-white bg-jumbo-900"></span>
       </button>
       <label for="darkLightm" class="cursor-pointer sr-only"></label>
       <div class="-mr-2 -my-2 md:hidden">
