--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -1,3 +1,5 @@
+{% load read_time %}
+
 <h2 class="sr-only">Details</h2>
 <article class="space-y-5">
   <section class="flex items-center space-x-2">
@@ -39,6 +41,14 @@
     </svg>
     <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">Updated on
       {{ object.mod_date|date:'D, d M Y H:i' }}</span>
+  </section>
+  <section class="flex items-center space-x-2">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 dark:text-jumbo-100" viewBox="0 0 20 20" fill="currentColor">
+      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
+    </svg>
+    <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">
+        {{ object.body|readtime }}
+    </span>
   </section>
 </article>
 
