--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -65,18 +65,18 @@
                 Previous
               </a>
             {% else %}
-              <span class="pagination_next_prev_buttons disabled:opacity-50" disabled>
+              <button class="pagination_next_prev_buttons disabled:opacity-50" disabled>
                 Previous
-              </span>
+              </button>
             {% endif %}
             {% if page_obj.has_next %}
               <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="pagination_next_prev_buttons ml-3 dark:hover:bg-jumbo-800">
                 Next
               </a>
             {% else %}
-              <span class="pagination_next_prev_buttons ml-3 disabled:opacity-50" disabled>
+              <button class="pagination_next_prev_buttons ml-3 disabled:opacity-50" disabled>
                 Next
-              </span>
+              </button>
             {% endif %}
           </section>
 
