--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -52,7 +52,7 @@
   </section>
   <section class="mt-3">
     <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-indigo-600 hover:text-indigo-500 dark:text-flamingo-200 dark:hover:text-flamingo-400">
-      Read the post
+      Read more about this {{ context.content_type }}
     </a>
   </section>
 </article>
