--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -1,4 +1,4 @@
-{% load static links_menu menu_footer_set changelog featured_post featured_page super_buttons %}
+{% load static changelog super_buttons menu links_menu menu_footer_set featured_post featured_page %}
 
 <div id="navbar" x-data="{ open: false }" @keydown.window.escape="open = false" class="bg-gray-50 dark:bg-jumbo-900">
   <!-- Mobile menu -->
@@ -25,93 +25,8 @@
               <button x-on:click.prevent="tab = 'featured'" class="border-transparent flex-1 whitespace-nowrap py-4 px-1 border-b-2 text-base font-medium" :class="{ 'border-cornflower-600 text-cornflower-600 dark:border-cornflower-300 dark:text-cornflower-300': tab === 'featured', 'border-transparent': !(tab === 'featured') }">Featured</button>
             </div>
           </div>
-
-          <div x-show="tab === 'main'" class="px-4 pt-10 pb-6 space-y-12" role="tabpanel" tabindex="0">
-            <div class="grid grid-cols-1 items-start gap-y-10 gap-x-6">
-              <div class="grid grid-cols-1 gap-y-10 gap-x-6">
-                <div>
-                  <p id="mobile-gosomewhere-heading-0" class="font-medium text-gray-900 dark:text-jumbo-100">
-                    Go somewhere
-                  </p>
-                  <ul role="list" aria-labelledby="mobile-gosomewhere-heading-0" class="mt-6 space-y-6">
-                    {% links_menu %}
-                  </ul>
-                </div>
-                <div>
-                  <p id="mobile-directlinks-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                    Direct links
-                  </p>
-                  <ul role="list" aria-labelledby="mobile-directlinks-heading" class="mt-6 space-y-6">
-                    {% mfl_setting "D" %}
-                  </ul>
-                </div>
-              </div>
-              {% if user.is_authenticated %}
-                <div class="grid grid-cols-1 gap-y-10 gap-x-4">
-                  <div>
-                    <p id="desktop-dlperm-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                      DL Permission
-                    </p>
-                    <ul role="list" aria-labelledby="desktop-dlperm-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                      {% mfl_setting "NP" %}
-                    </ul>
-                  </div>
-                  {% if user.is_staff %}
-                    <div>
-                      <p id="desktop-dlstaff-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                        DL Staff
-                      </p>
-                      <ul role="list" aria-labelledby="desktop-dlstaff-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                        {% mfl_setting "NS" %}
-                      </ul>
-                    </div>
-                  {% endif %}
-                  {% if user.is_superuser %}
-                    <div>
-                      <p id="desktop-dladminlists-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                        DL Admin Lists
-                      </p>
-                      <ul role="list" aria-labelledby="desktop-dladminlists-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                        {% mfl_setting "NAL" %}
-                      </ul>
-                    </div>
-                    <div>
-                      <p id="desktop-dladmin-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                        DL Admin
-                      </p>
-                      <ul role="list" aria-labelledby="desktop-dladmin-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                        {% mfl_setting "NA" %}
-                      </ul>
-                    </div>
-                  {% endif %}
-                </div>
-              {% endif %}
-            </div>
-          </div>
-
-          <div x-show="tab === 'featured'" class="px-4 pt-10 pb-6 space-y-12" role="tabpanel" tabindex="0">
-            <div class="grid grid-cols-1 items-start gap-y-10 gap-x-6">
-              <div class="grid grid-cols-1 gap-y-10 gap-x-6">
-                <div>
-                  <p id="mobile-featured-heading-1" class="font-medium text-gray-900 dark:text-jumbo-100">
-                    Featured
-                  </p>
-                  <ul role="list" aria-labelledby="mobile-featured-heading-1" class="mt-6 space-y-6">
-                    {% featured_post_list %}
-                  </ul>
-                </div>
-                <div>
-                  <p id="mobile-superfeatured-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                    Super Featured
-                  </p>
-                  <ul role="list" aria-labelledby="mobile-superfeatured-heading" class="mt-6 space-y-6">
-                    {% super_featured_post_list %}
-                    {% super_featured_page_list %}
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+            {% tab_menu "Main" %}
+            {% tab_menu "Featured" %}
         </div>
 
         <div class="border-t border-gray-200 dark:border-jumbo-700 py-6 px-4 space-y-6">
@@ -154,118 +69,8 @@
                 <!-- Mega menus -->
                 <div class="ml-8 z-50">
                   <div class="h-full flex justify-center space-x-8">
-                    <div class="flex" x-data="{ open: false, focus: false }" @keydown.window.escape="open = false" @close-popover-group.window="onClosePopoverGroup">
-                      <div class="relative flex">
-                        <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" @click="open=!open" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()" :class="{ 'border-cornflower-600 text-cornflower-600 dark:border-cornflower-300 dark:text-cornflower-300': open, 'border-transparent': !(open) }">
-                          Main
-                        </button>
-                      </div>
-                      <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="'Main' mega menu, show/hide based on flyout menu state." class="absolute top-full inset-x-0 text-gray-900 dark:text-jumbo-200 sm:text-sm" x-ref="panel" @click.away="open = false" style="display: none;">
-                        <!-- Presentational element used to render the bottom shadow, if we put the shadow on the actual panel it pokes out the top, so we use this shorter element to hide the top of the shadow -->
-                        <div class="absolute inset-0 top-1/2 bg-white dark:bg-jumbo-900 shadow" aria-hidden="true"></div>
-                        <div class="relative bg-white dark:bg-jumbo-900">
-                          <div class="max-w-7xl mx-auto px-8">
-                            <div class="grid grid-cols-2 items-start gap-y-10 gap-x-8 pt-10 pb-12">
-                              <div class="grid grid-cols-2 gap-y-10 gap-x-8">
-                                <div>
-                                  <p id="desktop-gosomewhere-heading-0" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                    Go somewhere
-                                  </p>
-                                  <ul role="list" aria-labelledby="desktop-gosomewhere-heading-0" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                    {% links_menu %}
-                                  </ul>
-                                </div>
-                                <div>
-                                  <p id="desktop-directlinks-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                    Direct links
-                                  </p>
-                                  <ul role="list" aria-labelledby="desktop-directlinks-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                    {% mfl_setting "D" %}
-                                  </ul>
-                                </div>
-                              </div>
-                              {% if user.is_authenticated %}
-                                <div class="grid grid-cols-4 gap-y-10 gap-x-8">
-                                  <div>
-                                    <p id="desktop-dlperm-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                      DL Permission
-                                    </p>
-                                    <ul role="list" aria-labelledby="desktop-dlperm-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                      {% mfl_setting "NP" %}
-                                    </ul>
-                                  </div>
-                                  {% if user.is_staff %}
-                                    <div>
-                                      <p id="desktop-dlstaff-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                        DL Staff
-                                      </p>
-                                      <ul role="list" aria-labelledby="desktop-dlstaff-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                        {% mfl_setting "NS" %}
-                                      </ul>
-                                    </div>
-                                  {% endif %}
-                                  {% if user.is_superuser %}
-                                    <div>
-                                      <p id="desktop-dladminlists-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                        DL Admin Lists
-                                      </p>
-                                      <ul role="list" aria-labelledby="desktop-dladminlists-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                        {% mfl_setting "NAL" %}
-                                      </ul>
-                                    </div>
-                                    <div>
-                                      <p id="desktop-dladmin-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                        DL Admin
-                                      </p>
-                                      <ul role="list" aria-labelledby="desktop-dladmin-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                        {% mfl_setting "NA" %}
-                                      </ul>
-                                    </div>
-                                  {% endif %}
-                                </div>
-                              {% endif %}
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="flex" x-data="{ open: false, focus: false }" @keydown.window.escape="open = false" @close-popover-group.window="onClosePopoverGroup">
-                      <div class="relative flex">
-                        <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" @click="open=!open" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()" :class="{ 'border-cornflower-600 text-cornflower-600 dark:border-cornflower-300 dark:text-cornflower-300': open, 'border-transparent': !(open) }">
-                          Featured
-                        </button>
-                      </div>
-                      <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="'Featured' mega menu, show/hide based on flyout menu state." class="absolute top-full inset-x-0 text-gray-900 dark:text-jumbo-200 sm:text-sm" x-ref="panel" @click.away="open = false" style="display: none;">
-                        <!-- Presentational element used to render the bottom shadow, if we put the shadow on the actual panel it pokes out the top, so we use this shorter element to hide the top of the shadow -->
-                        <div class="absolute inset-0 top-1/2 bg-white dark:bg-jumbo-900 shadow" aria-hidden="true"></div>
-                        <div class="relative bg-white dark:bg-jumbo-900">
-                          <div class="max-w-7xl mx-auto px-8">
-                            <div class="flex col-2 gap-y-10 gap-x-8 pt-10 pb-12">
-                              <div class="flex-none gap-y-10 gap-x-8">
-                                <div>
-                                  <p id="desktop-featured-heading-0" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                    Featured
-                                  </p>
-                                  <ul role="list" aria-labelledby="desktop-featured-heading-0" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                                    {% featured_post_list %}
-                                  </ul>
-                                </div>
-                              </div>
-                              <div>
-                                <p id="desktop-superfeatured-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                                  Super Featured
-                                </p>
-                                <ul role="list" aria-labelledby="desktop-superfeatured-heading" class="grid grid-cols-3 gap-x-4 mt-6 sm:mt-4">
-                                  {% super_featured_post_list %}
-                                  {% super_featured_page_list %}
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                    {% mega_menu "Main" %}
+                    {% mega_menu "Featured" %}
                   </div>
                 </div>
               </div>
