--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -30,19 +30,25 @@
         </div>
 
         <div class="border-t border-gray-200 dark:border-jumbo-700 py-6 px-4 space-y-6">
-          {% if not user.is_authenticated %}
-            <div class="flow-root">
-              <a href="{% url 'account_signup' %}" class="-m-2 p-2 block font-medium text-gray-900 dark:text-jumbo-100">Create an account</a>
-            </div>
-            <div class="flow-root">
-              <a href="{% url 'account_login' %}" class="-m-2 p-2 block font-medium text-gray-900 dark:text-jumbo-100">Sign in</a>
-            </div>
-          {% else %}
+          {% if user.is_authenticated %}
             <div class="flow-root">
               <a href="{{ user.get_absolute_url}}" class="-m-2 p-2 block font-medium text-gray-900 dark:text-jumbo-100">Profile</a>
             </div>
             <div class="flow-root">
               <a href="{% url 'account_logout' %}" class="-m-2 p-2 block font-medium text-gray-900 dark:text-jumbo-100">Logout</a>
+            </div>
+
+            {% if user.is_superuser %}
+              <div class="flow-root">
+                <a href="{{ user.get_absolute_toggle_secure_mode_status_url }}" class="-m-2 p-2 block font-medium  {% if user.is_superuser and not user.secure_mode %}text-gray-500 dark:text-jumbo-100 hover:text-gray-600 dark:hover:text-jumbo-200{% else %}text-flamingo-500 hover:text-flamingo-600{% endif %}" >Secure Mode Status</a>
+              </div>
+            {% endif %}
+          {% else %}
+            <div class="flow-root">
+              <a href="{% url 'account_signup' %}" class="-m-2 p-2 block font-medium text-gray-900 dark:text-jumbo-100">Create an account</a>
+            </div>
+            <div class="flow-root">
+              <a href="{% url 'account_login' %}" class="-m-2 p-2 block font-medium text-gray-900 dark:text-jumbo-100">Sign in</a>
             </div>
           {% endif %}
         </div>
